# arch-update

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MAINTAINERS.md  Makefile  PKGBUILD  README-fr.md  README.md  RELEASE.md  SECURITY.md  cliff.toml  install.sh  messages.po  uninstall.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  renovate.json
.github/ISSUE_TEMPLATE/: bug-report.md  bug_report.md  config.yml  feature-request.md  feature_request.md  other.md
.github/workflows/: CI.yml  evil.yml  mdl_style.rb  shellcheck.yml  test.yml
AUR/: .SRCINFO
desktop/: arch-update.desktop
desktop_file/: arch-check-update.desktop
doc/man/: arch-update.1  arch-update.1.scd  arch-update.conf.5  arch-update.conf.5.scd
po/: arch-update.pot  be.po  bg.po  ca.po  de.po  es.po  eu.po  fr.po  hu.po  it.po  ja.po  ka.po  nb.po  nl.po  pt_BR.po  pt_PT.po  ru.po  sv.po  zh_CN.po  zh_TW.po
res/: state
res/completions/: arch-update.bash  arch-update.fish  arch-update.zsh
res/config/: arch-update.conf.example  arch-update.config.example
res/desktop/: arch-update-tray.desktop  arch-update.desktop
res/icons/: README.md
scripts/: arch-check-update-notifier.sh  arch-check-update.sh  mkpot.sh  mkrelease.sh  updpo.sh
src/: arch-update.sh
src/tray/: Cargo.toml
src/tray/src/: check_times.rs  desktop_file.rs  i18n_dir.rs  icon_statefile.rs  icon_statefile_watcher.rs  main.rs  statefile_watcher.rs  tray.rs  tray_helpers.rs  updates_statefiles.rs
systemd/: arch-check-update-notifier.service  arch-check-update-notifier.timer  arch-update.service  arch-update.timer
(+35 files in other folders)
